// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CategoriesFilter rendering tests CategoriesFilter - categories not selected - test 1`] = `
<div>
  <div
    class="space-y-2"
    data-testid="categories-filter"
  >
    <label
      class="text-xs font-semibold tracking-wide text-slate-700 uppercase"
      data-testid="filter-label"
    >
      Kategorien
    </label>
    <div
      data-slot="popover"
      data-testid="mock-react-popover-root"
    >
      <div
        class="min-h-10.5 w-full cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 px-3 py-2 hover:border-slate-300 hover:bg-white flex flex-wrap items-center gap-2 shadow-sm transition-all"
        data-slot="popover-trigger"
        data-testid="popover-trigger"
      >
        <span
          class="text-sm text-slate-400"
          data-testid="no-selected-category"
        >
          Kategorien auswählen...
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </div>
      <div
        data-testid="mock-react-popover-portal"
      />
    </div>
  </div>
</div>
`;

exports[`CategoriesFilter rendering tests CategoriesFilter - categories selected - test 1`] = `
<div>
  <div
    class="space-y-2"
    data-testid="categories-filter"
  >
    <label
      class="text-xs font-semibold tracking-wide text-slate-700 uppercase"
      data-testid="filter-label"
    >
      Kategorien
    </label>
    <div
      data-slot="popover"
      data-testid="mock-react-popover-root"
    >
      <div
        class="min-h-10.5 w-full cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 px-3 py-2 hover:border-slate-300 hover:bg-white flex flex-wrap items-center gap-2 shadow-sm transition-all"
        data-slot="popover-trigger"
        data-testid="popover-trigger"
      >
        <span
          class="justify-center rounded-full text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden bg-secondary [a&]:hover:bg-secondary/90 flex items-center gap-1.5 border border-blue-200 bg-linear-to-r from-blue-50 to-blue-100 px-2.5 py-1 text-blue-700 hover:bg-blue-100"
          data-slot="badge"
          data-testid="selected-category-category-1"
        >
          <span
            class="font-medium"
          >
            Category 1
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-x cursor-pointer transition-colors hover:text-blue-900"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </span>
        <span
          class="justify-center rounded-full text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden bg-secondary [a&]:hover:bg-secondary/90 flex items-center gap-1.5 border border-blue-200 bg-linear-to-r from-blue-50 to-blue-100 px-2.5 py-1 text-blue-700 hover:bg-blue-100"
          data-slot="badge"
          data-testid="selected-category-category-2"
        >
          <span
            class="font-medium"
          >
            Category 2
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-x cursor-pointer transition-colors hover:text-blue-900"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </div>
      <div
        data-testid="mock-react-popover-portal"
      />
    </div>
  </div>
</div>
`;

exports[`CategoriesFilter rendering tests CategoriesFilter - category options empty - test 1`] = `
<div>
  <div
    class="space-y-2"
    data-testid="categories-filter"
  >
    <label
      class="text-xs font-semibold tracking-wide text-slate-700 uppercase"
      data-testid="filter-label"
    >
      Kategorien
    </label>
    <div
      data-slot="popover"
      data-testid="mock-react-popover-root"
    >
      <div
        class="min-h-10.5 w-full cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 px-3 py-2 hover:border-slate-300 hover:bg-white flex flex-wrap items-center gap-2 shadow-sm transition-all"
        data-slot="popover-trigger"
        data-testid="popover-trigger"
      >
        <span
          class="text-sm text-slate-400"
          data-testid="no-selected-category"
        >
          Kategorien auswählen...
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </div>
      <div
        data-testid="mock-react-popover-portal"
      >
        <div
          align="center"
          class="bg-popover text-popover-foreground data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 origin-(--radix-popover-content-transform-origin) rounded-md border outline-hidden w-72 border-slate-200 p-0 shadow-lg"
          data-slot="popover-content"
          data-testid="mock-react-popover-content"
          sideoffset="4"
        >
          <div
            class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
            cmdk-root=""
            data-slot="command"
            tabindex="-1"
          >
            <label
              cmdk-label=""
              for="radix-_r_2_"
              id="radix-_r_1_"
              style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
            />
            <div
              aria-label="Suggestions"
              class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
              cmdk-list=""
              data-slot="command-list"
              data-testid="category-options"
              id="radix-_r_0_"
              role="listbox"
              tabindex="-1"
            >
              <div
                cmdk-list-sizer=""
              >
                <div
                  class="py-6 text-sm text-slate-500"
                  cmdk-empty=""
                  data-slot="command-empty"
                  data-testid="category-options-empty"
                  role="presentation"
                >
                  Keine Kategorien gefunden.
                </div>
                <div
                  class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
                  cmdk-group=""
                  data-slot="command-group"
                  data-value="undefined"
                  role="presentation"
                >
                  <div
                    cmdk-group-items=""
                    role="group"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CategoriesFilter rendering tests CategoriesFilter - category options undefined - test 1`] = `
<div>
  <div
    class="space-y-2"
    data-testid="categories-filter"
  >
    <label
      class="text-xs font-semibold tracking-wide text-slate-700 uppercase"
      data-testid="filter-label"
    >
      Kategorien
    </label>
    <div
      data-slot="popover"
      data-testid="mock-react-popover-root"
    >
      <div
        class="min-h-10.5 w-full cursor-pointer rounded-lg border border-slate-200 bg-slate-50/50 px-3 py-2 hover:border-slate-300 hover:bg-white flex flex-wrap items-center gap-2 shadow-sm transition-all"
        data-slot="popover-trigger"
        data-testid="popover-trigger"
      >
        <span
          class="text-sm text-slate-400"
          data-testid="no-selected-category"
        >
          Kategorien auswählen...
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevrons-up-down ml-auto h-4 w-4 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 15 5 5 5-5"
          />
          <path
            d="m7 9 5-5 5 5"
          />
        </svg>
      </div>
      <div
        data-testid="mock-react-popover-portal"
      />
    </div>
  </div>
</div>
`;

exports[`CategoriesFilter rendering tests CategoriesFilter - filtersContext null - test 1`] = `<div />`;
